# Advanced-Training-Program

./: Linux Connection Instructions  README.md  RPI-setup-instructions.txt  RPI-setup-instructions.txt.bak  Ubuntu Setup Instructions
Class1/: Workshop-Guide-Session-1.odt  Workshop-Guide-Session-1.xhtml  Workshop-Guide-Session-3.xhtml
Class1/ToRPI/src/: thedevil.cpp
Class2/: CMakeCache.txt  CMakeLists.txt  Class2  Class2.cpp  Makefile  Workshop-Guide-Session-2.odt  Workshop-Guide-Session-2.xhtml  cmake_install.cmake  facetracking.cpp
Class2/facedetect/: CMakeCache.txt  CMakeLists.txt  JHPWMPCA9685_RPI.cpp  Makefile  cmake_install.cmake  facetracker  facetracking.cpp
Class3/: .~lock.Workshop-Guide-Session-3.odt#  Workshop-Guide-Session-3.odt
Class3/ToRPI/Class3/: Unconfirmed 190855.crdownload  class3.cbp  main.cpp
Class4/: OpenCV_Install.txt
Class4/Project1/: Project1.opensdf  Project1.sln
Class4/Project1/Project1/: Project1.vcxproj  main.cpp
Class4/Project1/Project1/x64/Debug/Project1.tlog/: Project1.lastbuildstate  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Class4/Project1/x64/Debug/: Project1.ilk
General/: RPI-Login -ROOT.lnk  RPI-Login.lnk  Windows10_fix.txt
RPIBOT/: JHPWMPCA9685_RPI.cpp  JHPWMPCA9685_RPI.h  main.cpp  rfcomm-client.c  rfcomm-server.c  rfcomm-serverwiththreads.c
